--- a/training/configs/colab-optimized.yaml
+++ b/training/configs/colab-optimized.yaml
@@ -21,7 +21,7 @@ lora:
     - "v_proj"
 
 training:
-  output_dir: "./training/checkpoints/colab-run"
+  output_dir: "/content/drive/MyDrive/vedic-astro-checkpoints"  # Write directly to Google Drive
   num_train_epochs: 3
   per_device_train_batch_size: 1  # Reduced from 4 to 1
   per_device_eval_batch_size: 1
@@ -29,10 +29,10 @@ training:
   learning_rate: 2.0e-4
   warmup_steps: 100
   logging_steps: 10
-  save_steps: 10  # Save every 10 steps - very frequent backups!
-  eval_steps: 10  # Must match save_steps for load_best_model_at_end
+  save_steps: 100  # Save every 100 steps - frequent backups for Colab reliability
+  eval_steps: 100  # Must match save_steps for load_best_model_at_end
   eval_strategy: "steps"
-  save_total_limit: 10  # Keep last 10 checkpoints
+  save_total_limit: 3  # Keep only last 3 checkpoints to save Drive space
   load_best_model_at_end: true
   metric_for_best_model: "eval_loss"
   greater_is_better: false
