--- a/training/configs/colab-optimized.yaml
+++ b/training/configs/colab-optimized.yaml
@@ -11,21 +11,21 @@ model:
   torch_dtype: "float16"
 
 lora:
-  r: 8  # Reduced rank to save memory (was 16)
-  lora_alpha: 16  # Proportionally reduced
+  r: 8  # MUST match checkpoint - do not change mid-training!
+  lora_alpha: 16  # MUST match checkpoint - do not change mid-training!
   lora_dropout: 0.05
   bias: "none"
   task_type: "CAUSAL_LM"
   target_modules:
     - "q_proj"
-    - "v_proj"
+    - "v_proj"  # MUST match checkpoint - do not change mid-training!
 
 training:
   output_dir: "/content/drive/MyDrive/vedic-astro-checkpoints"  # Write directly to Google Drive
   num_train_epochs: 3
-  per_device_train_batch_size: 1  # Reduced from 4 to 1
-  per_device_eval_batch_size: 1
-  gradient_accumulation_steps: 16  # Increased to maintain effective batch size of 16
+  per_device_train_batch_size: 4  # Increased to better utilize T4 GPU
+  per_device_eval_batch_size: 4
+  gradient_accumulation_steps: 4  # Reduced but maintains effective batch size of 16
   learning_rate: 2.0e-4
   warmup_steps: 100
   logging_steps: 10
