--- a/training/configs/colab-optimized.yaml
+++ b/training/configs/colab-optimized.yaml
@@ -25,7 +25,7 @@ training:
   num_train_epochs: 3
   per_device_train_batch_size: 4  # Increased to better utilize T4 GPU
   per_device_eval_batch_size: 4
-  gradient_accumulation_steps: 4  # Reduced but maintains effective batch size of 16
+  gradient_accumulation_steps: 16  # Higher accumulation = fewer steps, faster completion
   learning_rate: 2.0e-4
   warmup_steps: 100
   logging_steps: 10
